# Iris-Project

./: Iris-Project.ipynb  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Iris-Project-checkpoint.ipynb
