[tool.poetry]
name = "Iris"
version = "0.1.0"
description = ""
authors = ["Viktor Ashcheulov"]

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.4.1"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
pandas = "^1.0.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
